fixed flickering on load

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,9 @@
 .container {
   overflow: hidden;
 }
-
+.load-hidden {
+  visibility: hidden;
+}
 .btn {
   font-weight: 600;
   text-transform: uppercase;
@@ -81,6 +83,7 @@ h5 {
   padding: 1rem;
 }
 section {
+  visibility: hidden;
   position: relative;
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -305,7 +308,9 @@ header div {
   background-color: var(--secondary-gray);
   /* background-color: var(--primary-black); */
 }
-
+.home-about {
+  visibility: hidden;
+}
 .home-about p {
   color: var(--primary-black);
 }
@@ -359,6 +364,7 @@ header div {
 
 .tracks {
   /* background: var(--secondary-gray); */
+  visibility: hidden;
   padding-top: 1rem;
   display: flex;
   flex-direction: column;
@@ -441,6 +447,7 @@ header div {
   align-items: center;
 }
 .card {
+  visibility: hidden;
   border: none;
   box-shadow: var(--shadow);
   border-radius: 8px;
@@ -477,6 +484,7 @@ header div {
 
 .timeline .timeline-row {
   display: flex;
+  visibility: hidden;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -503,6 +511,7 @@ header div {
 }
 
 .timeline .timeline-row .roadmap-point {
+  /* visibility: hidden; */
   background: white;
   height: 15px;
   width: 15px;
@@ -512,6 +521,8 @@ header div {
 }
 
 .roadmap-path {
+  visibility: hidden;
+
   background: var(--primary-gradient);
   height: 780px;
   width: 4px;
@@ -612,6 +623,7 @@ header div {
   text-align: center;
   padding: 1rem;
   width: 370px;
+  visibility: hidden;
 }
 
 .core-committee .core-committee-row .member .member-name {
@@ -647,6 +659,7 @@ header div {
 .technical-committee .technical-committee-row .member {
   text-align: center;
   /*  */
+  visibility: hidden;
   /* color: #3d3e53; */
   margin-left: 2rem;
   margin-right: 2rem;
@@ -677,7 +690,7 @@ header div {
 
 .advisory-committee .advisory-committee-row .member {
   text-align: center;
-
+  visibility: hidden;
   margin-left: 2rem;
   margin-right: 2rem;
   width: 300px;
